--- a/drive-download-20251224T065221Z-3-001/classroom1.html
+++ b/drive-download-20251224T065221Z-3-001/classroom1.html
@@ -5,9 +5,8 @@
 <base target="_top">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <link rel="icon" href="https://static.wixstatic.com/media/a503e5_dcefff2c05f14dc0b989b3ae8e6972a5~mv2.png">
+     <link rel="icon" href="https://static.wixstatic.com/media/ea9b41_29451989463c475b801a0d64e69914a8~mv2.jpg">
 </head>
-
 <div align="center">
 <iframe src="" 
 
